--- a/blinkly/packages/blinkly-server/package.json
+++ b/blinkly/packages/blinkly-server/package.json
@@ -1,7 +1,8 @@
 {
   "name": "blinkly-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "main.js",
+  "type": "module",
   "author": "Alex Choi",
   "license": "MIT",
   "devDependencies": {
@@ -9,15 +10,20 @@
     "esbuild": "^0.17.5",
     "esbuild-register": "^3.4.2",
     "nodemon": "^2.0.20",
+    "pino-pretty": "^9.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@fastify/swagger": "^8.3.0",
+    "@fastify/swagger-ui": "^1.3.0",
     "fastify": "^4.12.0"
   },
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "start": "node -r esbuild-register src/main.ts",
-    "start:dev": "yarn ts-node-dev -r esbuild-register --transpile-only src/main.ts"
+    "esstart": "node -r esbuild-register src/main.ts",
+    "esstart:dev": "yarn ts-node-dev -r esbuild-register --transpile-only src/main.ts | pino-pretty",
+    "start": "ts-node-esm --transpileOnly ./src/main.ts | pino-pretty",
+    "dev": "nodemon --watch ./src --exec \"ts-node-esm --transpileOnly ./src/main.ts | pino-pretty\" -e ts"
   }
 }
