--- a/blinkly/packages/blinkly-server/package.json
+++ b/blinkly/packages/blinkly-server/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "@fastify/swagger": "^8.3.0",
     "@fastify/swagger-ui": "^1.3.0",
-    "fastify": "^4.12.0"
+    "fastify": "^4.12.0",
+    "prisma": "^4.9.0"
   },
   "scripts": {
     "build": "tsc -p tsconfig.json",
