--- a/blinkly/packages/blinkly-server/package.json
+++ b/blinkly/packages/blinkly-server/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@fastify/swagger": "^8.3.0",
     "@fastify/swagger-ui": "^1.3.0",
+    "@prisma/client": "^4.9.0",
     "fastify": "^4.12.0",
     "prisma": "^4.9.0"
   },
