--- a/blinkly/packages/blinkly-server/package.json
+++ b/blinkly/packages/blinkly-server/package.json
@@ -6,6 +6,7 @@
   "author": "Alex Choi",
   "license": "MIT",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "^18.11.18",
     "esbuild": "^0.17.5",
     "esbuild-register": "^3.4.2",
@@ -18,6 +19,7 @@
     "@fastify/swagger": "^8.3.0",
     "@fastify/swagger-ui": "^1.3.0",
     "@prisma/client": "^4.9.0",
+    "bcrypt": "^5.1.0",
     "fastify": "^4.12.0",
     "prisma": "^4.9.0"
   },
