--- a/blinkly/packages/blinkly-server/package.json
+++ b/blinkly/packages/blinkly-server/package.json
@@ -19,8 +19,11 @@
     "@fastify/swagger": "^8.3.0",
     "@fastify/swagger-ui": "^1.3.0",
     "@prisma/client": "^4.9.0",
+    "@types/jsonwebtoken": "^9.0.1",
     "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
     "fastify": "^4.12.0",
+    "jsonwebtoken": "^9.0.0",
     "prisma": "^4.9.0"
   },
   "scripts": {
