--- a/blinkly/packages/blinkly-server/package.json
+++ b/blinkly/packages/blinkly-server/package.json
@@ -16,6 +16,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@fastify/cookie": "^8.3.0",
     "@fastify/swagger": "^8.3.0",
     "@fastify/swagger-ui": "^1.3.0",
     "@prisma/client": "^4.9.0",
