--- a/blinkly/packages/blinkly-client/package.json
+++ b/blinkly/packages/blinkly-client/package.json
@@ -21,7 +21,7 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-error-boundary": "^3.1.4",
+    "react-hook-form": "^7.43.2",
     "styled-components": "^5.3.6",
     "swr": "^2.0.3",
     "typescript": "4.9.5"
