--- a/blinkly/packages/blinkly-server/package.json
+++ b/blinkly/packages/blinkly-server/package.json
@@ -19,7 +19,9 @@
     "@fastify/cookie": "^8.3.0",
     "@fastify/swagger": "^8.3.0",
     "@fastify/swagger-ui": "^1.3.0",
+    "@fastify/type-provider-typebox": "^2.4.0",
     "@prisma/client": "^4.9.0",
+    "@sinclair/typebox": "^0.25.24",
     "@types/jsonwebtoken": "^9.0.1",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
