--- a/blinkly/packages/blinkly-server/package.json
+++ b/blinkly/packages/blinkly-server/package.json
@@ -22,7 +22,9 @@
     "@fastify/type-provider-typebox": "^2.4.0",
     "@prisma/client": "^4.9.0",
     "@sinclair/typebox": "^0.25.24",
+    "@types/axios": "^0.14.0",
     "@types/jsonwebtoken": "^9.0.1",
+    "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "fastify": "^4.12.0",
