--- a/blinkly/packages/blinkly-server/package.json
+++ b/blinkly/packages/blinkly-server/package.json
@@ -29,6 +29,11 @@
     "dotenv": "^16.0.3",
     "fastify": "^4.12.0",
     "jsonwebtoken": "^9.0.0",
+    "metascraper": "^5.34.0",
+    "metascraper-author": "^5.33.7",
+    "metascraper-image": "^5.33.7",
+    "metascraper-logo-favicon": "^5.33.8",
+    "metascraper-publisher": "^5.33.7",
     "prisma": "^4.9.0"
   },
   "scripts": {
