--- a/blinkly/packages/blinkly-client/package.json
+++ b/blinkly/packages/blinkly-client/package.json
@@ -13,6 +13,7 @@
     "@next/font": "13.1.6",
     "@types/axios": "^0.14.0",
     "@types/node": "18.13.0",
+    "@types/qs": "^6.9.7",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "axios": "^1.3.3",
@@ -20,6 +21,7 @@
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
+    "qs": "^6.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.2",
