--- a/blinkly/packages/blinkly-server/package.json
+++ b/blinkly/packages/blinkly-server/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@fastify/cookie": "^8.3.0",
+    "@fastify/cors": "^8.2.1",
     "@fastify/swagger": "^8.3.0",
     "@fastify/swagger-ui": "^1.3.0",
     "@fastify/type-provider-typebox": "^2.4.0",
@@ -41,6 +42,6 @@
     "esstart": "node -r esbuild-register src/main.ts",
     "esstart:dev": "yarn ts-node-dev -r esbuild-register --transpile-only src/main.ts | pino-pretty",
     "start": "ts-node-esm --transpileOnly ./src/main.ts | pino-pretty",
-    "dev": "nodemon --watch ./src --exec \"ts-node-esm --transpileOnly ./src/main.ts | pino-pretty\" -e ts"
+    "dev": "set NODE_ENV=development && nodemon --watch ./src --exec \"ts-node-esm --transpileOnly ./src/main.ts | pino-pretty\" -e ts"
   }
 }
