--- a/blinkly/packages/blinkly-client/package.json
+++ b/blinkly/packages/blinkly-client/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^2.29.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "immer": "^9.0.21",
     "next": "13.1.6",
     "qs": "^6.11.1",
     "react": "18.2.0",
